[package]
name = "hellocl-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#opencl-sys = "0.2.1"
cl3 = "0.8"

[dependencies.opencl3]
version = "0.8"
features = ["CL_VERSION_2_1", "CL_VERSION_2_2", "CL_VERSION_3_0"]